@@ -1,16 +1,17 @@
 #!/usr/bin/perl
 
 # csv2xls: Convert csv to xls
-#	   (m)'07 [06-May-2007]
-
-our $VERSION = "1.0";
+#	   (m)'07 [03 Jul 2007]
 
 use strict;
 use warnings;
 
-sub usage ()
+our $VERSION = "1.2";
+
+sub usage
 {
-    print STDERR <<EOU;
+    my $err = shift and select STDERR;
+    print <<EOU;
 usage: csv2xls [-s <sep>] [-q <quot>] [-w <width>] [-d <dtfmt>]
                [-o <xls>] [file.csv]
        -s <sep>   use <sep>   as seperator char. Auto-detect, default = ';'
@@ -21,11 +22,10 @@ usage: csv2xls [-s <sep>] [-q <quot>] [-w <width>] [-d <dtfmt>]
 		  if from standard input, defaults to csv2xls.xls
        -f         force usage of <xls> if already exists (unlink before use)
        -d <dtfmt> use <dtfmt> as date formats.   Default = 'dd-mm-yyyy'
+       -u         CSV is UTF8
 EOU
-    exit;
+    exit $err;
     } # usage
-
-@ARGV == 1 and $ARGV[0] eq "-?" || $ARGV[0] =~ m/^-+help$/ and usage ();
 
 use Getopt::Long qw(:config bundling nopermute passthrough);
 my $sep;	# Set after reading first line in a flurry attempt to auto-detect
@@ -33,16 +33,20 @@ my $quo = '"';
 my $wdt = 4;	# Default minimal column width
 my $xls;	# Excel out file name
 my $frc = 0;	# Force use of file
+my $utf = 0;	# Data is encoded in Unicode
 my $dtf = "dd-mm-yyyy";	# Date format
 
 GetOptions (
+    "help|?"	=> sub { usage (0); },
+
     "c|s=s"	=> \$sep,
     "q=s"	=> \$quo,
     "w=i"	=> \$wdt,
     "o|x=s"	=> \$xls,
     "d=s"	=> \$dtf,
     "f"		=> \$frc,
-    ) or usage;
+    "u"		=> \$utf,
+    ) or usage (1);
 
 my $title = @ARGV && -f $ARGV[0] ? $ARGV[0] : "csv2xls";
 ($xls //= $title) =~ s/\.csv$/.xls/;
@@ -60,6 +64,7 @@ use Text::CSV_XS;
 use Date::Calc qw( Delta_Days Days_in_Month );
 use Spreadsheet::WriteExcel;
 use Spreadsheet::WriteExcel::Big;
+use Encode qw( from_to );
 
 my $csv;
 
@@ -94,7 +99,12 @@ while (<>) {
 	    # Yeah I know it should be a ',' (hence Csv), but the majority
 	    # of the csv files to be shown comes from fucking Micky$hit,
 	    # that uses semiColon ';' instead.
-	$csv = Text::CSV_XS-> new ({ sep_char => $sep, quote_char => $quo, binary => 1 });
+	$csv = Text::CSV_XS-> new ({
+	    sep_char       => $sep,
+	    quote_char     => $quo,
+	    binary         => 1,
+	    keep_meta_info => 1,
+	    });
 	}
     $csv->parse ($_);
     my @row = $csv->fields () or next;
@@ -104,8 +114,20 @@ while (<>) {
 	my $l = length $val;
 	$l > $w[$c] and $w[$c] = $l;
 
+	if ($utf and $csv->is_binary ($c)) {
+	    from_to ($val, "utf-8", "ucs2");
+	    $wks->write_unicode ($h, $c, $val);
+	    next;
+	    }
+
 	if ($csv->is_quoted ($c)) {
-	    $wks->write_string ($h, $c, $val);
+	    if ($utf) {
+		from_to ($val, "utf-8", "ucs2");
+		$wks->write_unicode ($h, $c, $val);
+		}
+	    else {
+		$wks->write_string  ($h, $c, $val);
+		}
 	    next;
 	    }
 
